<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".view.activity.NotificationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:background="@drawable/boarder_bottom_round_pink"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:background="@drawable/back"
                android:id="@+id/iv_back"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="@dimen/_30sdp"/>
            <com.sea.seaconnect.controller.CustomViews.MyTextViewNunitoBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/review"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_24sdp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvOtherUser"
                    android:layout_width="@dimen/_100sdp"
                    android:src="@drawable/user"
                    android:layout_height="@dimen/_120sdp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvMyImage"
                    android:layout_width="@dimen/_100sdp"
                    android:src="@drawable/user"
                    android:layout_marginLeft="-40dp"
                    android:layout_height="@dimen/_120sdp"/>
            </LinearLayout>
        </RelativeLayout>
        <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:padding="@dimen/_5sdp"
            android:textAlignment="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textSize="@dimen/_18sdp"
            android:text="Review your recent meeting with Lyna Hyden"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_height="match_parent">
            <com.sea.seaconnect.controller.CustomViews.MyTextViewNunitoBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/public_review"
                android:padding="@dimen/_5sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"/>
            <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:text="@string/user_photo_reviews"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/rbPhotos"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"
                android:stepSize="1" />
            <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/user_bio_reviews"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/rbBio"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="1" />

            <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/user_intereaction_reviews"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/rbIntrectionReviews"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="2"
                android:stepSize="1" />
            <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/user_intereaction_better_reviews"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/boarder_outer_white"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_height="@dimen/_100sdp">

            <com.sea.seaconnect.controller.CustomViews.MyEditTextRegular
                android:id="@+id/etFeedBack"
                android:layout_width="match_parent"
                android:hint="@string/suggestions"
                android:textSize="@dimen/_12sdp"
                android:textColorHint="@color/white"
                android:padding="@dimen/_13sdp"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_height="wrap_content"/>
            </RelativeLayout>

            <com.sea.seaconnect.controller.CustomViews.MyTextViewNunitoBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/private_review"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_18sdp"/>
            <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/user_meet_reviews"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <RadioButton
                    android:id="@+id/radio_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:checked="true"
                    android:text="@string/yes" />
                <RadioButton
                    android:id="@+id/radio_no"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>
            <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/user_feedback_reviews"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/boarder_outer_white"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_height="@dimen/_100sdp">
                <com.sea.seaconnect.controller.CustomViews.MyEditTextRegular
                    android:id="@+id/etOtherFeedback"
                    android:layout_width="match_parent"
                    android:hint="Your feedback here"
                    android:textSize="@dimen/_12sdp"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/_13sdp"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:id="@+id/ll_login"
                android:background="@drawable/boarder_round_login"
                android:layout_height="wrap_content">
                <com.sea.seaconnect.controller.CustomViews.MyTextViewNunitoBold
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/submit"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoader_rating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>