<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/sidebar_girls"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_gravity="end"
            android:id="@+id/nav_close"
            android:background="@drawable/close"
            android:layout_height="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".6"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="0dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_80sdp"
                    android:id="@+id/img_profile_pic"
                    android:background="@drawable/user"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="@dimen/_80sdp"/>
                <com.sea.seaconnect.controller.CustomViews.MyTextViewNunitoBold
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_user_name"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1.4"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_height="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/ll_edit_profile"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content">
                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:text="@string/edit_profile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/ll_connection"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content">
                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:text="@string/connection"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/ll_notifications"
                    android:padding="@dimen/_5sdp"
                    android:layout_height="wrap_content">
                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:text="@string/notifications"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/reviews"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>
                <LinearLayout
                android:id="@+id/ll_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:visibility="gone"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/subscriptions"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_blocked_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/blocked"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="Terms &amp; Conditions"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="Privacy Policy"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <com.sea.seaconnect.controller.CustomViews.MyTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>




            </LinearLayout>

    </LinearLayout>

</LinearLayout>