<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@drawable/login_bg"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight=".9"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:background="@drawable/login_img"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="-70dp"
            android:orientation="vertical"
            android:layout_height="@dimen/_100sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:src="@drawable/logo"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.1"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical"
            android:layout_height="0dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_email"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_pwd"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:inputType="textPassword"

                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                     android:buttonTint="@color/white"
                    android:layout_height="wrap_content"/>
                <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                    android:layout_width="wrap_content"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/ll_login"
                android:background="@drawable/boarder_round_login"
                android:layout_height="wrap_content">
                <com.sea.seaconnect.controller.CustomViews.MyTextViewNunitoBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/connect"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Dont't have an account? "
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"/>
                <com.sea.seaconnect.controller.CustomViews.MyTextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sign_up"
                    android:textColor="@color/colorAccent"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>